update orderManage's select spilit in 12_17

--- a/shopServer/templates/base.html
+++ b/shopServer/templates/base.html
@@ -656,7 +656,7 @@
 
 		<script src="{% static 'js/jquery.form.min.js' %}"></script>
 
-		<script src="{% static 'js/jquery.twbsPagination.js' %}"></script>
+		<script src="{% static 'js/jquery.twbsPagination.min.js' %}"></script>
 
 		<script src="{% static 'js/tool.js' %}"></script>
 		<script type="text/javascript">
