--- a/shopServer/templates/orderManage.html
+++ b/shopServer/templates/orderManage.html
@@ -49,8 +49,7 @@
 					<th>用户ID</th>
 					<th>价格</th>
 					<th>下单时间</th>
-					<th>是否审核</th>
-					<th>是否通过</th>
+					<th>状态</th>
 					<th>编辑</th>
 				</tr>
 			</thead>
@@ -61,6 +60,9 @@
 
 		<div class="text-center">
 			<ul id="visible-pages-example"></ul>
+		</div>
+		<div class="text-center">
+			<ul id="aaa"></ul>
 		</div>
 
 	</div>
@@ -98,11 +100,13 @@
 	<script src="{% static 'layer/layer.js' %}" type="text/javascript" charset="utf-8"></script>
 	<script>
         var thispage = 1
-
+		
 
 		//解析数据到页面
+		var m=0;
 		function orderListToPage(data) {
 			for (var i = 0; i < data.length; i++) {
+				m+=1;
 				oneOrder(data[i])
 			}
 			
@@ -117,7 +121,8 @@
 			price = data["price"]
 			ordertime = data["ordertime"]
 			status = data["status"]
-			var myHtml = '<tr class="mytr" orderid="' + orderid + '"><td class="info ele"><input class="checkbox-one" name="checkbox-one" type="checkbox"/></td><td scope="row">1</td><td>' + orderid + '</td><td>' + userid + '</td><td>' + price + '</td><td>'+ordertime+'</td><td>' + status + '</td><td><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></td><td > <button class="btn btn-default delete">删除</button></td></tr>'
+			var myHtml = '<tr class="mytr" orderid="' + orderid + '"><td class="info ele"><input class="checkbox-one" name="checkbox-one" type="checkbox"/></td><td scope="row">'+m+'</td><td>' + orderid + '</td><td>' + userid + '</td><td>' + price + '</td><td>'+ordertime+'</td><td>' + status + '</td><td > <button class="btn btn-default delete">删除</button></td></tr>'
+			
 			$(".myListTable").append(myHtml)
 			$('.delete').click(function () {
 				var that = $(this).parents('tr');
@@ -135,6 +140,7 @@
 				url: "http://localhost:8000/orderSpilit/?page=" + thispage,
 				type:"POST",
 				success:function(data){
+					m=0;
 					ordercount = data.ordercount
 					orderListPages = Math.ceil(parseInt(ordercount) / 10 )
 					$(".myListTable").children("tr").remove()
@@ -157,6 +163,7 @@
 						onPageClick: function (event, page) {
 							thispage  = page;
 							loadData()
+							
 						}
 					});
 				},
@@ -165,13 +172,17 @@
 				}
 			})
 		}		
-		loadData()
 		
-
+		
+		$(document).ready(function(){
+			loadData()
+		});
 	
 		//解析数据 data为数组
 		
 		$(".AllDelete").click(function(){
+			m=0;
+            console.log("批量删除");
             $("[name = checkbox-one]:checkbox").each(function () {
                 if ($(this).is(":checked")) {
                     var that = $(this).parents('tr');
@@ -191,12 +202,18 @@
                 $(".checkbox-one").prop("checked",false);
             }
         })
+
+
+		var selectpage = 1
 		function ajaxSubmitForm(){
+			
+			m=0;
 			var option = 
 			{
 				url : "http://localhost:8000/ordertabalelistJaon/",
 				type : 'POST',
-				dataType : 'json',
+				data:{"selectpage":selectpage},
+				// dataType : 'json',
 				success : function(data)
 				{   
 					newData = data.data
@@ -206,11 +223,37 @@
 					else{
 						layer.msg("查找失败")
 					}
-					$('.mytr').remove();
-					orderListToPage(newData)
+					selectCount = data.selectCount
+					selectListPages = Math.ceil(parseInt(selectCount) / 10 )
+					$(".myListTable").children("tr").remove()
+					SelectData = data.data;
+					orderListToPage(SelectData)
+					$("#orderCount").text(selectCount)
+					$("#visible-pages-example").children(".sumdiv").remove()
 					
-					document.getElementById("orderid").value = "";
-					document.getElementById("userid").value = "";
+					var spanele = '<span class="sumdiv">共' + selectListPages + '页,当前第' + selectpage + '页</span>'
+					$("#visible-pages-example").append($(spanele))
+					
+					$('#visible-pages-example').twbsPagination({
+						totalPages:selectListPages,
+						first: "首页",
+						last: "尾页",
+						prev: '上一页',
+						next: '下一页',
+						startPage: 1,
+						visiblePages: selectListPages>5?5:selectListPages,
+						version: '1.1',
+						onPageClick: function (event, page) {
+							selectpage  = page;
+							ajaxSubmitForm()
+						}
+					});
+
+					// $('.mytr').remove();
+					// orderListToPage(newData)
+					
+					// document.getElementById("orderid").value = "";
+					// document.getElementById("userid").value = "";
 					
 					
 				},
@@ -222,14 +265,26 @@
 			$("#searchForm").ajaxSubmit(option);
 			return false;
 		}
+		
 
+		
 		$('#searchForm').on('submit', function(e) {
 			e.preventDefault(); 
 			$(this).ajaxSubmit({
+				data:{"selectpage":selectpage},
 				success: function () {
-					ajaxSubmitForm();
+					
+					var _form = document.getElementById("searchForm")
+					if(_form.orderid.value=="" && _form.userid.value==""){
+						layer.msg("用户名，订单号不能为空")
+					}
+					else{
+						$("#visible-pages-example").twbsPagination("destroy")
+						ajaxSubmitForm();
+					}
 			}
 		})
 		});
+
 	</script>
 	{% endblock %}
