--- a/shopServer/templates/adPage.html
+++ b/shopServer/templates/adPage.html
@@ -26,6 +26,9 @@
         src: static/myfile/1.jpg;
         height: 60px;
     }
+    .trash , .delete{
+		background-color: #D33A3C;
+	}
     .sumdiv{
 		background-color: #fff;
 		display: inline-block;
@@ -38,27 +41,34 @@
 		border: 1px solid #ccc;
 		border-radius: 4px;
 	}
+    .addBtn{
+        background-color: #00c0ef;
+        border-color: #00acd6;
+    }
+    .checkbox-one{
+        float: left;
+    }
 	</style>
 
 {% endblock %}
 
 {% block content %}
-
-<button type="button" class="btn btn-primary addBtn" data-toggle="modal" data-target="#myModal" style="margin:5px;"><span class="glyphicon glyphicon-plus"></span> 添加</button>
+<button class="btn btn-default trash AllDelete"><span class = "glyphicon glyphicon-trash">批量删除</span></button>
+<button type="button" class="btn btn-default btn-primary addBtn" data-toggle="modal" data-target="#myModal" style="margin:5px;"><span class="glyphicon glyphicon-plus"></span>添加广告</button>
 <div id="xxx" class=" col-md-12" style="padding:0;">
     <a class="col-md-12" style="margin:5px; padding-left:0; color: black;margin-right:0;"><strong>广告列表</strong></a>
     <table id="table" class="table table-bordered" >
-        <tr name="row">
+        <tr name="row" class="heading">
             <td id="item" style="display:none"></td>
-            <th>自然序号</th>
+            <th><input class="checkbox-one" id="checkbox-all" type="checkbox"/>自然序号</th>
             <th>图片</th>
             <th>位置</th>
             <th>广告状态</th>
             <th>编辑</th>
         </tr>
     </table>
-    <div class="text-center">
-        <ul id="visible-pages-example"></ul>
+    <div class="text-center pagediv">
+        <ul id="visible-pages-example" class="page"></ul>
     </div>
 </div>
 <!-- 模态框（Modal） -->
@@ -82,9 +92,6 @@
                     <div id="img">
                         <img src="static/myfile/1.jpg" alt="" id="myimages">
                     </div>
-                    <div style="padding-top:20px">
-                        <label for="">广告ID：</label><input type="text" name="adId" id="location">
-                    </div>
                 </form>
                 
             </div>
@@ -104,18 +111,24 @@
 <script src="{% static 'js/jquery.form.min.js' %}"></script>
 <script src="{% static 'layer/layer.js' %}" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
+    $('body').append("<div style='display:none;width:100%; margin:0 auto;position:fixed;left:0;top:0;bottom: 0;z-index: 111;opacity: 0.5;' id='loading'><a style='left: 50%;position: absolute;top:50%'><img src='http://localhost:8000/static/myfile/loading.gif' /></a></div>")
+    $(document).ajaxStart(function(){
+    　　$("#loading").show();
+    })
+    $(document).ajaxComplete(function(){
+    　　$("#loading").hide();
+    })
 	
     var currpage = 1;
-    var countPages = 0;
+    var prePages = 0;
     //添加item函数
     function adEleFn(data){
         imgs = data.imgs;
         adid = data.adid;
         adtime = data.adtime;
-        var Tr = '<tr name="row" class="myrow"><td>' + adid + '</td><td><div id="imagesdiv"><img src="/static/myfile/'+ imgs +'"/></div></td><td>' + imgs + '</td><td>' + adtime + '</td><td><button class="btn btn-danger delete">删 除</button> </td></tr>';
+        var Tr = '<tr name="row" class="myrow"><td><input class="checkbox-one" name="checkbox-one" type="checkbox"/>' + adid + '</td><td><div id="imagesdiv"><img src="/static/myfile/'+ imgs +'"/></div></td><td>' + imgs + '</td><td>' + adtime + '</td><td><button class="btn btn-danger delete">删 除</button> </td></tr>';
         $("#table").append(Tr);
     }
-    
     //解析数据函数
     function parseDataFn(result){
         data = result.data;
@@ -124,22 +137,27 @@
             perdata = data[i];
             adEleFn(perdata);
         }
-        
     }
     //请求数据
     function ajaxfn(){
+        console.log("hhhhhhh");
         $.ajax({
             type: "post",
+            // async: false,
             url: 'http://localhost:8000/adManageJsonSelect/?page=' + currpage,
             success: function (result){
-                console.log(result);
+                $(".myrow").remove();
+                $(".sumdiv").remove();
                 parseDataFn(result);
                 adcounts = result.adcounts;
                 countPages = Math.ceil(parseInt(adcounts) / 8 );
-                
+                if(prePages!=countPages){  
+                    $(".pagediv").html('<ul id="visible-pages-example" class="page"></ul>');  
+                } 
+                prePages = countPages; 
                 var spanele = '<span class="sumdiv">共' + countPages + '页,当前第' + countPages + '页,共' + adcounts + '条数据</span>';
                 $("#visible-pages-example").append(spanele);
-                    $('#visible-pages-example').twbsPagination({
+                $('#visible-pages-example').twbsPagination({
                     totalPages:countPages,
                     first: "首页",
                     last: "尾页",
@@ -150,21 +168,15 @@
                     version: '1.1',
                     onPageClick: function (event, page) {
                         currpage  = page;
-                        $(".myrow").remove();
-                        $(".sumdiv").remove();
                         ajaxfn();
                     }
                 });
             },
             error: function (err){
                 console.log("请求失败");
-                console.log(err);
             }
         });
     }
-    //调用Ajax 去请求数据
-    ajaxfn();
-    
     //ajaxform提交弹框表单
     function ajaxSubmitForm(){
         console.log("submigtajax");
@@ -175,22 +187,6 @@
             success : function(data)
             {   
                 $("#myModal").modal("hide");
-                console.log("tjianjiachenggg");
-                var crutime = new Date();
-                var year = crutime.getFullYear();
-                var month = crutime.getMonth()+1;
-                var day = crutime.getDate();
-                var hour = crutime.getHours();
-                var minute = crutime.getMinutes();
-                var second = crutime.getSeconds();
-                currtime = year+'-'+month+'-'+day+' '+hour+':'+minute+':'+second;
-                console.log(currtime);
-                adId = data.adId;
-                imagePath = data.imagePath;
-                $(".myrow").remove();
-                $(".sumdiv").remove();
-                // addAd = '<tr name="row" class="myrow"><td>' + adId + '</td><td><div id="imagesdiv"><img src="/static/myfile/'+ imagePath +'"/></div></td><td>' + imagePath + '</td><td>' + currtime + '</td><td><button class="btn btn-danger delete">删 除</button> </td></tr>';
-                // $("#table").append(addAd);
                 ajaxfn();
             },
             error: function(data) {
@@ -200,55 +196,75 @@
         $("#myform").ajaxSubmit(option);
         return false;
     }
+    //调用Ajax 去请求数据
+    ajaxfn();
     //当modal关闭的时候数据清除
     $('#myModal').on('hide.bs.modal', function ()
     {
         $('#myform')[0].reset();
-        //这个方法来清除缓存
         $("#myimages").attr("src" , "###")
     });
     //图片预览
     $(".myfile").change(function() {
         var $img = $("#myimages");
-        console.log($img);
-        console.log("tupianyulan");
         var $file = $(this);
-        //获得文件内容和信息
         var fileObj = $file[0];
         var windowURL = window.URL || window.webkitURL;
         var dataURL;
         if(fileObj && fileObj.files && fileObj.files[0]){
             var filesLen = fileObj.files.length;
-            console.log(fileObj.files);
 
             dataURL = windowURL.createObjectURL(fileObj.files[0]);
-            console.log(dataURL);
             $img.attr('src',dataURL);
-            console.log($img.attr("src"));
         }
     });
     $("#table").delegate("button","click",function(){
         if($(this).html() == "删 除"){
-            dataId= $(this).parent().prev().prev().prev().prev().html();
+            dataId= $(this).parent().prev().prev().prev().prev().text();
             that = this;
-            console.log(dataId);
             $.ajax({
                 type: "get",
                 url: "http://localhost:8000/adManageJsonDelete/?Id="+dataId,
                 success: function (result){
                     if (result.status == "ok"){
-                        console.log("shangchuchengg");
-                        $(that).parent().parent().remove();
-                        layer.msg('删除成功');
+                        ajaxfn();
                     }
                 },
                 error: function (err){
                     console.log("请求失败");
-                    console.log(err);
                 }
             });
         }
     });
+    $(".AllDelete").click(function(){
+        $("[name = checkbox-one]:checkbox").each(function () {
+            if ($(this).is(":checked")) {
+                var that = $(this).parents('tr');
+                var objData = $(this).parent().text();
+                $.ajax({
+                    type: "get",
+                    url: "http://localhost:8000/adManageJsonDelete/?Id="+objData,
+                    success: function (result){
+                        if (result.status == "ok"){
+                            ajaxfn();
+                        }
+                    },
+                    error: function (err){
+                        console.log("请求失败");
+                    }
+                });
+            }
+        });
+    });
+    $('#checkbox-all').click(function () {
+        if($('#checkbox-all').is(':checked')) {
+            console.log("get - all")
+            $(".checkbox-one").prop("checked",true);
+        }else{
+            console.log("close - all")
+            $(".checkbox-one").prop("checked",false);
+        }
+    })
 </script>
 {% endblock %}
 
